# kindle-screenshot

./: .gitignore  README.md  pyproject.toml
.claude/project/: da.md  dev.md  po.md
docs/superpowers/plans/: 2026-05-05-kindle-screenshot.md
docs/superpowers/specs/: 2026-05-05-kindle-screenshot-design.md
src/kindle_screenshot/: __init__.py  __main__.py  capture.py  cli.py  hashing.py  input.py  pdf.py
tests/: test_capture.py  test_cli.py  test_hashing.py  test_input.py  test_pdf.py
