[project]
name = "kindle-screenshot"
version = "0.1.0"
description = "Kindle for Mac の書籍をスクリーンショットで PDF 化する CLI ツール"
requires-python = ">=3.12"
dependencies = [
    "Pillow>=10.0.0",
    "img2pdf>=0.5.0",
]

[project.scripts]
kindle-screenshot = "kindle_screenshot.cli:main"

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
]

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/kindle_screenshot"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --tb=short"
